--- a/serialize-tree/src/CMakeLists.txt
+++ b/serialize-tree/src/CMakeLists.txt
@@ -9,9 +9,11 @@ add_executable(serialize-tree main.cpp)
 add_subdirectory(node)
 add_subdirectory(tree)
 add_subdirectory(parser)
+add_subdirectory(exception)
 
 target_link_libraries(serialize-tree
                       tree-lib
                       parser-lib
-                      node-lib)
+                      node-lib
+                      exception-lib)
 
