--- a/serialize-tree/Makefile
+++ b/serialize-tree/Makefile
@@ -4,6 +4,7 @@ BUILD_DIR := build
 all:
 	mkdir -p $(BUILD_DIR)
 	cd ./$(BUILD_DIR) && cmake ../ && make
+	cd ./$(BUILD_DIR) && make test
 
 clean:
 	rm -Rf $(BUILD_DIR)
