code fixes (c++ standard, commentary, typedef, delete ctor)

--- a/serialize-tree/Makefile
+++ b/serialize-tree/Makefile
@@ -4,6 +4,8 @@ BUILD_DIR := build
 all:
 	mkdir -p $(BUILD_DIR)
 	cd ./$(BUILD_DIR) && cmake ../ && make
+
+test: all
 	cd ./$(BUILD_DIR) && make test
 
 clean:
