added noexcept functions, added lvalue add_Child function, split tests by files

--- a/serialize-tree/tests/CMakeLists.txt
+++ b/serialize-tree/tests/CMakeLists.txt
@@ -1,7 +1,10 @@
 project(tests)
 
-set(test_source tests.cpp)
-add_executable(test-tree ${test_source})
+set(test_source_tree tests_tree.cpp)
+set(test_source_empty_tree tests_empty_tree.cpp)
+
+add_executable(test-tree ${test_source_tree})
+add_executable(test-empty-tree ${test_source_empty_tree})
 
 target_link_libraries(test-tree
                       tree-lib
@@ -9,4 +12,12 @@ target_link_libraries(test-tree
                       node-lib
                       exception-lib)
 
+target_link_libraries(test-empty-tree
+                      tree-lib
+                      parser-lib
+                      node-lib
+                      exception-lib)
+
+
 add_test(NAME test-tree COMMAND test-tree)
+add_test(NAME test-empty-tree COMMAND test-empty-tree)
