--- a/data-structures/stack/tests/CMakeLists.txt
+++ b/data-structures/stack/tests/CMakeLists.txt
@@ -1,21 +1,19 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(tests C)
+project(tests CXX)
 
-find_package(Cmocka REQUIRED)
-message(STATUS "Using cmocka ${Cmocka_VERSION}")
+find_package(Boost 1.56 REQUIRED COMPONENTS unit_test_framework)
+message(STATUS "Using boost ${Boost_VERSION}")
 
-set(src_destroy destroy.c)
-set(src_push    push.c)
-set(src_pop     pop.c)
+set(src_push push.cpp)
+set(src_pop  pop.cpp)
 
-add_executable(test-destroy ${src_destroy})
-add_executable(test-push    ${src_push})
-add_executable(test-pop     ${src_pop})
+add_executable(test-push ${src_push})
+add_executable(test-pop  ${src_pop})
 
-foreach(_target test-destroy test-push test-pop)
-    target_link_libraries(${_target} stack-lib
-                                     ${CMOCKA_LIBRARY})
+foreach(_target test-push test-pop)
+    target_link_libraries(${_target} stack-lib Boost::unit_test_framework)
+    target_compile_features(${_target} PRIVATE cxx_std_20)
     target_compile_options(${_target} PRIVATE "-Wall" "-Werror" "-O3")
     target_include_directories(${_target} PRIVATE ../include)
     add_test(NAME ${_target} COMMAND ${_target})
