--- a/data-structures/linked-list/CMakeLists.txt
+++ b/data-structures/linked-list/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(stack C)
+project(linked-list CXX)
 
-set(exec_name double-linked-list)
+set(exec_name example)
 
 add_subdirectory(src)
 
-add_executable(${exec_name} example.c)
+add_executable(${exec_name} example.cpp)
 target_include_directories(${exec_name} PRIVATE ./include)
 
 target_compile_options(${exec_name} PRIVATE "-Wall" "-Werror" "-O3")
