rewrote double-ended-queue implementation from C to CPP

--- a/data-structures/double-ended-queue/CMakeLists.txt
+++ b/data-structures/double-ended-queue/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(stack C)
+project(double-ended-queue CXX)
 
-set(exec_name double-ended-queue)
+set(exec_name example)
 
 add_subdirectory(src)
 
-add_executable(${exec_name} example.c)
+add_executable(${exec_name} example.cpp)
 target_include_directories(${exec_name} PRIVATE ./include)
 
 target_compile_options(${exec_name} PRIVATE "-Wall" "-Werror" "-O3")
-target_link_libraries(${exec_name} queue-lib)
+target_link_libraries(${exec_name} double-ended-queue-lib)
 
 if(ENABLE_TESTING)
     enable_testing()
