--- a/dijkstra/src/CMakeLists.txt
+++ b/dijkstra/src/CMakeLists.txt
@@ -7,3 +7,4 @@ add_library(${lib_name} STATIC ${lib_srcs})
 
 target_include_directories(${lib_name} PRIVATE ../include)
 target_compile_options(${lib_name} PRIVATE "-Wall" "-Werror" "-O3")
+target_compile_features(${lib_name} PRIVATE cxx_std_20)
